--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,7 @@ body {
     margin-top: 400px;
     margin-left: 720px;
     font-weight: 500;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .down-text {
@@ -28,8 +27,7 @@ body {
     font-weight: 250;
     margin-top: -10px;
     margin-left: 808px;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .dicsord .btn:not(:hover),
@@ -44,15 +42,13 @@ body {
     font-size: 15px;
     font-weight: 300;
     color: rgba(255, 255, 255, 0.89);
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .dicsord .btn:hover {
     background-color: #3d3d42;
     transition: 2.5s;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .web .btn:not(:hover),
@@ -67,15 +63,13 @@ body {
     font-size: 15px;
     font-weight: 300;
     color: rgba(255, 255, 255, 0.89);
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .web .btn:hover {
     background-color: #3d3d42;
     transition: 2.5s;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .discord .btn:not(:hover),
@@ -90,15 +84,13 @@ body {
     font-size: 15px;
     font-weight: 300;
     color: rgba(255, 255, 255, 0.89);
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .discord .btn:hover {
     background-color: #3d3d42;
     transition: 2.5s;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .github .btn:not(:hover),
@@ -113,13 +105,11 @@ body {
     font-size: 15px;
     font-weight: 300;
     color: rgba(255, 255, 255, 0.89);
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .github .btn:hover {
     background-color: #3d3d42;
     transition: 2.5s;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
